Continue to refactor and improve code organization. (#14)